<resources>
    <string name="app_name">Nextcloud Cookbook</string>
    <string name="change_folder">Change Folder</string>
    <string name="preparation_time">Preparation Time</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="total_time">Total Time</string>
    <string name="ingredients">Ingredients:</string>
    <string name="instructions">Instructions:</string>
    <string name="textview">TextView</string>
    <string name="description">Description:</string>
    <string name="save">SAVE</string>
</resources>
