<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/recipeView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="always"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/recipeImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="false"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                app:srcCompat="@android:mipmap/sym_def_app_icon" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recipeImage"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="Title"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_alignStart="@+id/title"
                android:layout_alignEnd="@+id/title"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="TextView" />

            <LinearLayout
                android:id="@+id/timeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:padding="5dp"
                android:paddingStart="30dp"
                android:paddingEnd="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:background="#BABABA"
                        android:padding="5dp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/preparation_time"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/prepTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:background="#BABABA"
                        android:padding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/cooking_time"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/cookingTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="#BABABA"
                        android:padding="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/total_time"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/totalTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:layout_alignStart="@+id/description"
                android:layout_marginStart="106dp"
                android:layout_marginTop="-5dp"
                android:clickable="true"
                android:padding="0dp"
                app:backgroundTint="@android:color/transparent"
                app:borderWidth="0dp"
                app:elevation="0dp"
                app:maxImageSize="30dp"
                app:srcCompat="@drawable/ic_play" />

            <TextView
                android:id="@+id/ingredientsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/timeLayout"
                android:layout_alignStart="@+id/description"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:text="@string/ingredients"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ingredientsText"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/instructionsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ingredients"
                android:layout_alignStart="@+id/description"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:text="@string/instructions"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/instructionsText"
                android:layout_alignStart="@+id/title"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/instructions"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/instructions"
                android:layout_alignEnd="@+id/title"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:clickable="true"
                app:backgroundTint="#FFFFFF"
                app:maxImageSize="40dp"
                app:srcCompat="@drawable/ic_werkzeuge_bearbeiten" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>